New class - Ácsé

--- a/LogoKaresz.csproj
+++ b/LogoKaresz.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Pont.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ácsé.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
